@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2007/04/25 16:39:40 tnn Exp $
+# $NetBSD: Makefile,v 1.11 2007/08/16 09:27:04 tnn Exp $
 #
 
 DISTNAME=	memcached-1.2.1
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	http://www.danga.com/memcached/dist/
 
