@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6601 2007/08/15 12:43:14 obache Exp $
+$NetBSD: TODO,v 1.6602 2007/08/16 09:27:03 tnn Exp $
 
 Suggested new packages
 ======================
@@ -509,7 +509,6 @@ Suggested package updates
 	o gkrellm-xmms-2.1.22
 	o glade-3.3.0
 	o glchess-1.0.5
-	o glib2-2.14.0
 	o global-5.6
 	o glpk-4.20
 	o gmime-2.2.10
@@ -667,7 +666,6 @@ Suggested package updates
 	o libdvbpsi-0.1.5
 	o libelf-0.8.9
 	o libetpan-0.51
-	o libevent-1.3c
 	o libextractor-0.5.18a
 	o libflash-0.4.13
 	o libggi-2.2.2
