@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.43 2007/08/09 19:33:58 drochner Exp $
+# $NetBSD: Makefile,v 1.44 2007/08/16 09:27:05 tnn Exp $
 #
 
 DISTNAME=		tor-0.1.2.16
+PKGREVISION=		1
 CATEGORIES=		net security
 MASTER_SITES=		http://tor.eff.org/dist/
 
