@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2007/08/15 21:10:54 joerg Exp $
+# $NetBSD: Makefile,v 1.16 2007/08/16 09:27:05 tnn Exp $
 
 DISTNAME=	pbulk-0.12
+PKGREVISION=	1
 CATEGORIES=	pkgtools
 MASTER_SITES=	# empty
 DISTFILES=	# empty
